--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/auction?createDatabaseIfNotExist=true
+server.port=8003
+spring.datasource.url=jdbc:mysql://localhost:3306/fier1-3-auction
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=rootering
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
