--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8003
-spring.datasource.url=jdbc:mysql://localhost:3306/fier1-3-auction
+spring.datasource.url=jdbc:mysql://localhost:3306/auction
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=rootering
+spring.datasource.password=@HavaleaS1
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.mvc.hiddenmethod.filter.enabled: true
